--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <br>
         <h3>Why the <i>Hato</i> got torpedoed. </h3>
         <p>The <i>Hato</i> got torpedoed in 1942. It was on page 12. It was a small dutch freighter. It says that on page 10. One reason on why the <i>Hato</i> got torpedoed was because World War II was happening. In World War II Allied forces and Axis forces fought against each other. The Axis forces were attacking Cura&ccedil;ao because it was a main export of oil. Once in control of the oil, the Axis forces could limit the export of oil to the U.S.A. Without oil the U.S.A., they could not power their weapons and vehicles. Another reason is since the <i>Hato</i> was going to the U.S.A., which it says on page 9, Germans didn't want that so they torpedoed it.</p>
+        <img src="http://i223.photobucket.com/albums/dd13/KNSM_PIC/KNSM%20-%20O/Odyseus1922a.jpg"
         <br>
         <h3>The History.</h3>
         <p>The Bombardment of Cura&ccedil;ao happened in 1942. The German submarine, U-130, came to Curacao to take down the oil tanks. It was captained by Kapit&auml;n zur See Ernst Kals. Kals told the gunner to shoot at the oil tanks. While all of the shots missed the oil tanks, the explosions woke the Dutch gunners. After they were noticed, the Germans fled. Nobody was hurt or killed. This minor skirmish was a part of a bigger four year war: The Battle of the Caribbean. Lasting from 1941 through 1945, the battle of the Caribbean included many allied forces and some Axis forces.</p>
