--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <br>
         <h3>The History.</h3>
         <p>The Bombardment of Cura&ccedil;ao happened in 1942. The German submarine, U-130, came to Curacao to take down the oil tanks. It was captained by Kapit&auml;n zur See Ernst Kals. Kals told the gunner to shoot at the oil tanks. While all of the shots missed the oil tanks, the explosions woke the Dutch gunners. After they were noticed, the Germans fled. Nobody was hurt or killed. This minor skirmish was a part of a bigger four year war: The Battle of the Caribbean. Lasting from 1941 through 1945, the battle of the Caribbean included many allied forces and some Axis forces.</p>
+        <img src="http://www.strangemilitary.com/images/content/146996.jpg"
         <br>
         <h3>Why the author chose to put this in.</h3>
         <p>I think the author, Theodore Taylor, put this event in because it shows that while Phillip was stranded on an island there is a war going on. I also think Mr. Taylor put this in because it made the story. If the <i>Hato</i> wasn't torpedoed, Phillip would have made it safely to the U.S.A. The story would be about a boring Phillip Enright that sat around in Virgina. If it wasn't sunk, Phillip would have still been a snotty little kid. Timothy taught him how to be a good person. The <i>Hato</i> being sunk was just a vehicle to get Phillip and Timothy together. In all I think that Theodore Taylor put this in because it made the story and brought Phillip and Timothy together.</p>
