--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <br>
         <h3>Why the author chose to put this in.</h3>
         <p>I think the author, Theodore Taylor, put this event in because it shows that while Phillip was stranded on an island there is a war going on. I also think Mr. Taylor put this in because it made the story. If the <i>Hato</i> wasn't torpedoed, Phillip would have made it safely to the U.S.A. The story would be about a boring Phillip Enright that sat around in Virgina. If it wasn't sunk, Phillip would have still been a snotty little kid. Timothy taught him how to be a good person. The <i>Hato</i> being sunk was just a vehicle to get Phillip and Timothy together. In all I think that Theodore Taylor put this in because it made the story and brought Phillip and Timothy together.</p>
+        <h3>I used to think that Phillip was a spoiled little kid. Now I think that he is very mature. Some evidence from the text is he says when he sees Henrik he feels much older than him. He says this on page 74.
+</h3>
     </div>
 
     <style>
