--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="all">
         <h1>The Cay</h1>
+        <h2>By Benjamin Kaufman</h2>
         <br>
         <br>
         <h3>Why the <i>Hato</i> got torpedoed. </h3>
