added my BBBBRRRRRRRRRRROOOOO

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="image.png">
             <h1>Benjamin Kaufman</h1>
             <hr>
-            <p>Programmer</p>
+            <p>Learning programmer. Brother of hcjk</p>
             <ul>
                 <li><a href="http://iamcoollego.github.io">The Cay Project</a></li>
                 <li><a href="http://iamcoollego.github.io/antibullying">Anti-Bullying Project</a></li>
