--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <hr>
             <p>Aspiring developer. Brother of <a href="http://hcjk.co">hcjk</a>.</p>
             <ul>
-                <li><a href="http://iamcoollego.github.io">The Cay Project</a></li>
+                <li><a href="http://iamcoollego.github.io/thecay">The Cay Project</a></li>
                 <li><a href="http://iamcoollego.github.io/antibullying">Anti-Bullying Project</a></li>
                 <li><a href="http://dabomb.netau.net">Colonial Times Project</a></li>
                 <li><a href="https://twitter.com/_bsjk">Twitter</a></li>
