--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="http://iamcoollego.github.io/thecay">The Cay Project</a></li>
                 <li><a href="http://iamcoollego.github.io/antibullying">Anti-Bullying Project</a></li>
-                <li><a href="http://dabomb.netau.net">Colonial Times Project</a></li>
+                <li><a href="http://dabomb.netau.net"><del>Colonial Times Project</del></a></li>
                 <li><a href="https://twitter.com/_bsjk">Twitter</a></li>
             </ul>
         </div>
