--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="outer">
         <div class="inner">
-            <img src="image.png">
+            <img src="thedrawing.png">
             <h1>Benjamin Kaufman</h1>
             <hr>
             <p>Aspiring developer. Brother of <a href="http://hcjk.co">hcjk</a>.</p>
