--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="outer">
         <div class="inner">
             <img src="thedrawing.png">
-            <h1>Benjamin Kaufman</h1>
+            <h1>benjamin kaufman</h1>
             <hr>
-            <p>Aspiring developer. Brother of <a href="http://hcjk.co">hcjk</a>.</p>
+            <p>aspiring developer. brother of <a href="http://hcjk.co">hcjk</a>.</p>
             <ul>
-                <li><a href="http://iamcoollego.github.io/thecay">The Cay Project</a></li>
-                <li><a href="http://iamcoollego.github.io/antibullying">Anti-Bullying Project</a></li>
-                <li><a href="http://dabomb.netau.net"><del>Colonial Times Project</del></a></li>
-                <li><a href="https://twitter.com/_bsjk">Twitter</a></li>
+                <li><a href="http://iamcoollego.github.io/thecay">the cay project</a></li>
+                <li><a href="http://iamcoollego.github.io/antibullying">anti-bullying project</a></li>
+                <li><a href="http://dabomb.netau.net"><del>colonial times project</del></a></li>
+                <div class="twitter"><li><a href="https://twitter.com/_bsjk">twitter</a></li></div>
             </ul>
         </div>
     </div>
