--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="http://iamcoollego.github.io/thecay">the cay project</a></li>
                 <li><a href="http://iamcoollego.github.io/antibullying">anti-bullying project</a></li>
-                <li><a href="https://www.youtube.com/channel/UCptrMOSGUz9GZDSKkkfvmGg/feed">/a><youtube</a></li>
+                <li><a href="https://www.youtube.com/channel/UCptrMOSGUz9GZDSKkkfvmGg/feed">youtube</a></li>
                 <div class="twitter"><li><a href="https://twitter.com/_bsjk">twitter</a></li></div>
             </ul>
         </div>
