--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="outer">
         <div class="inner">
             <img src="thedrawing.png">
-            <h1>benjerodongle kopplesworth IV</h1>
+            <h1>benjamin kaufman</h1>
             <hr>
             <p>aspiring developer. brother of <a href="http://hcjk.co">hcjk</a>.</p>
             <ul>
